messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-messaging-app
        image: django:latest
        ports:
        - containerPort: 8000
        command: ["/bin/sh", "-c"]
        args:
        - |
          pip install --no-cache-dir -r requirements.txt
          python manage.py migrate
          python manage.py runserver 0.0.0.0:8000
        volumeMounts:
        - name: app-code
          mountPath: /app
        workingDir: /app
      volumes:
      - name: app-code
        hostPath:
          path: /app
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app-service
spec:
  selector:
    app: django-messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
