messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app-service
  labels:
    app: django-messaging-app
spec:
  selector:
    app: django-messaging-app-blue  # Initially points to blue deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app-blue-service
  labels:
    app: django-messaging-app-blue
    version: blue
spec:
  selector:
    app: django-messaging-app
    version: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app-green-service
  labels:
    app: django-messaging-app-green
    version: green
spec:
  selector:
    app: django-messaging-app-green
    version: green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
